<resources>
    <string name="app_name">Janji Jiwa UAS</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="example_example_com">example@example.com</string>
    <string name="password">Password</string>
    <string name="bintang">********</string>
    <string name="anda_belum_mempunyai_akun">Anda belum mempunyai akun?</string>
    <string name="daftar">Daftar</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="anda_sudah_mempunyai_akun">Anda sudah mempunyai akun?</string>
    <string name="masuk">Masuk</string>
</resources>